--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,15 @@
 .Nav__container {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-color: #7dfcb5; }
 
 .Nav__logo {
+  display: flex;
+  align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); }
+
+.Nav__logo img {
+  width: 100px; }
 
 .Nav__links {
   display: flex;
