--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,10 +1,18 @@
+$primary: #7dfcb5;
+
 .Nav{
     &__container{
         display: flex;
         justify-content: space-around;
+        background-color: $primary;
     }
     &__logo{
+        display: flex;
+        align-items: center;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        img{
+            width: 100px;
+        }
     }
     &__links{
         display: flex;
