--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,7 +1,11 @@
 .Nav__container {
   display: flex;
   justify-content: space-around;
-  background-color: #7dfcb5; }
+  background-color: #7dfcb5;
+  padding: 15px 20px 0px 20px; }
+
+.Nav__section {
+  flex: 1 1 0px; }
 
 .Nav__logo {
   display: flex;
@@ -9,8 +13,32 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); }
 
 .Nav__logo img {
-  width: 100px; }
+  width: 80px;
+  padding-right: 15px; }
+
+.Nav__options-list {
+  display: flex;
+  justify-content: flex-end; }
+
+.Nav__strapline {
+  font-family: inherit;
+  font-size: 12px;
+  letter-spacing: -1px; }
+
+.Nav__bar-container {
+  background-color: white;
+  border-radius: 23px;
+  padding: 0px 10px;
+  height: 40px;
+  margin: auto;
+  font-weight: 500; }
 
 .Nav__links {
   display: flex;
-  list-style: none; }
+  justify-content: space-between;
+  list-style: none;
+  font-size: 11px;
+  padding: 0; }
+
+.Nav__links li {
+  padding: 3px 5px; }
