--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -5,18 +5,45 @@ $primary: #7dfcb5;
         display: flex;
         justify-content: space-around;
         background-color: $primary;
+        padding: 15px 20px 0px 20px;
+    }
+    &__section{
+        flex: 1 1 0px;
     }
     &__logo{
         display: flex;
         align-items: center;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         img{
-            width: 100px;
+            width: 80px;
+            padding-right: 15px;
         }
+    }
+    &__options-list{
+        display: flex;
+        justify-content: flex-end;
+    }
+    &__strapline{
+        font-family: inherit;
+        font-size: 12px;
+        letter-spacing: -1px;
+    }
+    &__bar-container{
+        background-color: white;
+        border-radius: 23px;
+        padding: 0px 10px;
+        height: 40px;
+        margin: auto;
+        font-weight: 500;
     }
     &__links{
         display: flex;
+        justify-content: space-between;
         list-style: none;
+        font-size: 11px;
+        padding: 0;
+        li{
+            padding: 3px 5px;
+        }
     }
-    &__dots{}
 }
